# django-message-broker

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.sh  setup.py
django_message_broker/: __init__.py  apps.py  base_channel_layer.py  config.py  layer.py  process_client.py  test.py
django_message_broker/server/: __init__.py  channels_client.py  channels_server.py  client_queue.py  data_message.py  exceptions.py  server_queue.py  signalling_message.py  socket_manager.py  utils.py
docs/: conf.py  documentation_coverage.txt  index.rst
docs/pages/: CHANGELOG.md  api_celery.rst  api_channels.rst  api_process.rst  iapi_channels_client.rst  iapi_channels_server.rst  iapi_client_queue.rst  iapi_data_message.rst  iapi_exceptions.rst  iapi_server_queue.rst  iapi_signalling_message.rst  iapi_socket_manager.rst  iapi_utils.rst  installation.rst  internal_api.rst  messaging.rst  msg_dm_pull.rst  msg_dm_send_to_chan.rst  msg_dm_send_to_grp.rst  msg_dm_sub_receive.rst  msg_sm_flush.rst  msg_sm_grp_add.rst  msg_sm_grp_rmv.rst  public_api.rst  reference.rst  upgrade-changelog.rst
tests/: conftest.py  runtests.py  test_channels_server_layer.py  test_layer.py  test_layers.py
tests/django channels/: test_channels_server_layer.py
tests/server/: test_client_server.py  test_utils.py
